--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,39 +1,38 @@
-﻿@{
-    ViewData["Title"] = "Tic Tac Toe";
+﻿@model GameViewModel
+@{
+    ViewBag.Title = "Tic Tac Toe";
 }
 
-<h2 class="text-center">'s turn</h2>
+@if (Model.IsGameOver)
+            {
+                <a asp-action="Index"><strong>New Game</strong></a>
+}
+else
+            {
+                <h2 class="mt-2">@Model.WhoseTurn.PlayerTurn's turn</h2>
+            }
 
-    <div class="row">
-        <div class="col">
-            <button class="btn rounded"></button>
-        </div>
-        <div class="col">
-            <button class="btn rounded"></button>
-        </div>
-        <div class="col">
-            <button class="btn rounded"></button>
-        </div>
+<form asp-action="Index" method="post">
+    <input type="hidden" asp-for="WhoseTurn.PlayerTurn" />
+
+    <div class="board">
+        @foreach(Square square in Model.Squares)
+            {
+                @if(square.IsEmpty)
+                {
+                    <button type="submit" name="WhoseTurn.SquareId" value="@square.SquareId" class="btn btn-outline-dark">
+                        &nbsp;
+                    </button>
+                }
+                else
+                {
+                    <button class="btn btn-outline-dark" disabled>@square.PlayerTurn</button>
+                }
+
+                @if(square.IsRightSquare)
+                {
+                    <br />
+                }
+            }
     </div>
-    <div class="row">
-        <div class="col">
-            <button class="btn rounded"></button>
-        </div>
-        <div class="col-4">
-            <button class="btn rounded"></button>
-        </div>
-        <div class="col-4">
-            <button class="btn rounded"></button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4">
-            <button class="btn rounded"></button>
-        </div>
-        <div class="col-4">
-            <button class="btn rounded"></button>
-        </div>
-        <div class="col-4">
-            <button class="btn rounded"></button>
-        </div>
-    </div>
+</form>
