--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="~/css/custom.css" />
 </head>
 <body>
-    <div class="container">
-        <header class="jumbotron text-center">
-            <h1>Let's Play PIG!</h1>
+    <div class="container text-center">
+        <header class="bg-info text-white p-5 mb-1">
+            <h1>@ViewBag.Title</h1>
         </header>
+
         <main role="main">
             @if (TempData.Keys.Contains("message"))
             {
-                <h2 class="bg-dark text-white text-center p-4 mt-4">@TempData["message"]</h2>
+                <h4 class="bg-success text-white p-3">@TempData["message"]</h4>
             }
 
             @RenderBody()
